--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.2.5",
+    "@mui/lab": "^5.0.0-alpha.62",
     "@mui/material": "^5.2.5",
+    "@stripe/stripe-js": "^1.22.0",
+    "axios": "^0.24.0",
+    "dotenv": "^10.0.0",
     "next": "12.0.7",
     "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-slick": "^0.28.1",
     "slick-carousel": "^1.8.1",
+    "stripe": "^8.195.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
